WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188939
Fix authentication for clients of WKPageLoaderClient after
r234941
https://bugs.webkit.org/show_bug.cgi?id=188939
Summary
Fix authentication for clients of WKPageLoaderClient after r234941
Alex Christensen
Reported
2018-08-24 17:33:58 PDT
Fix authentication for clients of WKPageLoaderClient after
r234941
Attachments
Patch
(6.16 KB, patch)
2018-08-24 17:42 PDT
,
Alex Christensen
youennf
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2018-08-24 17:42:37 PDT
Created
attachment 348063
[details]
Patch
youenn fablet
Comment 2
2018-08-24 18:23:51 PDT
Comment on
attachment 348063
[details]
Patch LGTM. We should increase our testing of unimplemented callbacks config through API tests so that our defaults do not change. In that particular case, that would require launching the http server...
Alex Christensen
Comment 3
2018-08-27 08:44:30 PDT
http://trac.webkit.org/r235364
Radar WebKit Bug Importer
Comment 4
2018-08-27 08:45:17 PDT
<
rdar://problem/43755378
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug